[gd_scene load_steps=2 format=3 uid="uid://xxxxxxxxxxxx"]
[ext_resource type="Script" path="res://scripts/test/test_vibe_communication.gd" id="1"]
[ext_resource type="Label" uid="uid://xxxxxxxxxxxx" path="res://assets/ui/fonts/default_theme.tres" id="2"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.125, 0.125, 0.125, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.2, 0.2, 1)
ambient_light_energy = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_1"]
shadow_color = Color(0, 0, 0, 0.378)
shadow_offset_x = 1
shadow_offset_y = 1

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 24
shadow_color = Color(0, 0, 0, 0.378)
shadow_offset_x = 1
shadow_offset_y = 1

[node name="TestVibeCommunication" type="Control"]
layout_mode = 3
anchors_preset = 15
script = ExtResource("1")
theme = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
theme_type_variation = &"Panel"

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleMedium"
text = "VibeHub 通信测试"
label_settings = SubResource("LabelSettings_1")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ConnectionStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_2")
text = "连接状态: 未连接"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartActivityBtn" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
textsize_flags_vertical = 1
theme_type_variation = &"Primary"
text = "开始活动"

[node name="UpdateActivityBtn" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
textsize_flags_vertical = 1
theme_type_variation = &"Secondary"
text = "更新活动"

[node name="EndActivityBtn" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
textsize_flags_vertical = 1
theme_type_variation = &"Danger"
text = "结束活动"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LogContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="LogContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "等待连接..."
